index.css
html {
	width: 100%;
	height: 100%;
	overflow: hidden;
	cursor: none;
	background: black;
	-webkit-user-select: none;
}

body {
	margin: 0px;
	display: flex;
	width: 100%;
	height: 100%;
}

a {
	cursor: none;
}

div::-webkit-scrollbar {
	display: none;
}

#info {
	position: relative;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: space-between;
	width: 330px;
	height: 100%;
	overflow: hidden;;
	background: white;
	transition-duration: 0.5s;
	z-index: 1;
}

#info-text {
	display: flex;
	overflow: hidden;
	width: 260px;
	height: 200px;
}

#info-text-container {
	position: relative;
	display: flex;
	width: 260px;
	height: 200px;
	margin: 40px 0px 0px 0px;
	left: 0px;
	transition-duration: 0.5s;
}

#info-text-container div {
	flex: 0 0 100%;
	width: 260px;
	color: #999999;
	font: 300 17px Noto Sans TC;
	line-height: 27px;
	-webkit-user-select: none;
	transition-duration: 0.5s;
}

#info-text-container div:hover {
	color: #666666;
}

#info-tag {
	position: absolute;
	font: 900 120px Noto Sans TC;
	color: transparent;
	transform-origin: center;
	transform: rotate(-90deg);
	right: -100px;
	bottom: 65px;
	-webkit-text-stroke: 2px #eeeeee;
	-webkit-user-select: none;
	transition-duration: 0.5s;
}

#info:hover #info-tag {
	color: #eeeeee;
}

#porfile_pic * {
	width: 100%;
	transition-duration: 0.3s;
}

#porfile_pic:hover * {
	transform: scale(1.1);
}

.link {
	position: relative;
	width: 120px;
	height: 22px;
	background: #eeeeee;
	display: flex;
	justify-content: center;
	align-items: center;
	margin: 8px;
	text-decoration: none;
	color: black;
	-webkit-user-select: none;
	transition-duration: 0.2s;
}

.link:hover {
	width: 150px;
	background: #aaeeff;
}

.link div {
	font: 300 20px Noto Sans TC;
	transform: translateY(2px);
	transition-duration: 0.3s;
}

#gallery-tag {
	position: absolute;
	font: 900 120px Noto Sans TC;
	color: transparent;
	transform-origin: center;
	transform: rotate(-90deg);
	right: -220px;
	bottom: 180px;
	-webkit-text-stroke: 2px #333333;
	-webkit-user-select: none;
	transition-duration: 0.5s;
	pointer-events: none;
}

#gallery:hover #gallery-tag {
	color: #333333;
}

#contents {
	display: flex;
	flex-wrap: wrap;
	padding: 30px;
	height: 100%;
	overflow-x: hidden;
	overflow-y: scroll;
	-webkit-box-sizing: border-box;
	transition-duration: 0.3s;
}

.image {
	margin: 9px;
	position: relative;
	overflow: hidden;
	border-radius: 8px;
	line-height: 0;
}

.image * {
	width: 100%;
	transition-duration: 0.3s;
	-webkit-user-select: none;
}

.image:hover * {
	opacity: 1;
	transform: scale(1.1);
}

.image a {
	position: absolute;
	height: 100%;
	top: 0px;
	display: flex;
	color: white;
	background: rgba(0, 0, 0, 0.6);
	text-decoration: none;
	font: 500 36px Noto Sans TC;
	justify-content: center;
	align-items: center;
	opacity: 0;
}

.project {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	justify-content: center;
	position: relative;
	width: 100%;
	height: 200px;
	margin: 9px;
	overflow: hidden;
	border-radius: 8px;
}

.project img {
	position: absolute;
	object-fit: cover;
	width: 100%;
	height: 100%;
	transition-duration: 0.3s;
}

.project:hover img {
	transform: scale(1.1);
}

.project div {
	position: absolute;
	width: 100%;
	height: 100%;
	background: linear-gradient(to right, rgba(30, 30, 30, 0.9) 50%, rgba(30, 30, 30, 0) 100%);
	transition-duration: 0.3s;
}

.project:hover div {
	opacity: 0.8;
}

.project h1 {
	position: relative;
	font: 30px Noto Sans TC;
	color: #eeeeee;
	line-height: 1;
	margin: 10px 10px 10px 30px;
}

.project a {
	position: relative;
	margin: 10px 10px 10px 30px;
	border: solid 1px #eeeeee;
	color: #eeeeee;
	text-decoration: none;
	font: 16px Noto Sans TC;
	padding: 5px 15px 5px 15px;
	transition-duration: 0.3s;
	border-radius: 17.5px;
}

.project a:hover {
	background: #eeeeee;
	color: black;
}

@keyframes slide-up {
	from { transform: translateY(30px); opacity: 0; }
	to { transform: translateY(0px); opacity: 1; }
}

@keyframes slide-right {
	from { transform: translateX(-60px); opacity: 0; }
	to { transform: translateX(0px); opacity: 1; }
}

@keyframes appear {
	from { opacity: 0; }
	to { opacity: 1; }
}

@keyframes arrow {
	from { transform: translateY(-20px) rotate(90deg); }
	to { transform: translateY(0px) rotate(90deg); }
}

#arrow div {
	opacity: 0;
}

@media screen and (max-width: 720px) {
	#info {
		position: fixed;
		width: 100%;
		left: 0%;
	}

	#arrow div {
		opacity: 1;
	}

	#contents {
		padding: 75px 15px 15px 15px;
	}
}

